{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 11,
  "lineage": "34c32c0a-ff68-20b1-46cc-661c54df0805",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "data",
      "type": "aws_security_group",
      "name": "default_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057454686230:security-group/sg-08fa0c1ad33d46f3c",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-08fa0c1ad33d46f3c",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-038ca6ba4cc59dcf1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057454686230:subnet/subnet-059a070808cbc5353",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "id": "subnet-059a070808cbc5353",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "057454686230",
            "state": "available",
            "vpc_id": "vpc-038ca6ba4cc59dcf1"
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057454686230:vpc/vpc-038ca6ba4cc59dcf1",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e27a20daa6baf4ae",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-043755924df433901",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-038ca6ba4cc59dcf1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c1209280b767185e",
            "owner_id": "057454686230",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b898040803850657",
            "arn": "arn:aws:ec2:us-east-1:057454686230:instance/i-0072e2908b9b89d4d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "super-reader-profile",
            "id": "i-0072e2908b9b89d4d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0feb26ad0d07aec45",
            "private_dns": "ip-172-31-61-242.ec2.internal",
            "private_ip": "172.31.61.242",
            "public_dns": "ec2-35-153-226-251.compute-1.amazonaws.com",
            "public_ip": "35.153.226.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e6d991878962bc12",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08fa0c1ad33d46f3c",
              "sg-0b1c547f8495fab59"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059a070808cbc5353",
            "tags": {
              "Name": "super-reader"
            },
            "tags_all": {
              "Name": "super-reader"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08fa0c1ad33d46f3c",
              "sg-0b1c547f8495fab59"
            ]
          },
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.instances_iam_instance_profile",
            "module.ec2.aws_iam_role.instances_iam_role",
            "module.ec2.aws_security_group.servers-sg",
            "module.ec2.data.aws_security_group.default_sg",
            "module.ec2.data.aws_subnet.subnet",
            "module.ec2.data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "servers-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057454686230:security-group/sg-0b1c547f8495fab59",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b1c547f8495fab59",
            "ingress": [],
            "name": "super-reader-sg",
            "name_prefix": "",
            "owner_id": "057454686230",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-038ca6ba4cc59dcf1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-355127131",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b1c547f8495fab59",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.servers-sg",
            "module.ec2.data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-3129482903",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b1c547f8495fab59",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.servers-sg",
            "module.ec2.data.aws_vpc.default_vpc"
          ]
        }
      ]
    }
  ]
}